--- a/doc/agile/v1/sprint_backlog_14.org
+++ b/doc/agile/v1/sprint_backlog_14.org
@@ -12,14 +12,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-04-05 Fri 21:44]
+#+CAPTION: Clock summary at [2019-04-05 Fri 22:04]
 | <75>                                                      |         |       |       |       |
 | Headline                                                  | Time    |       |       |     % |
 |-----------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                              | *74:18* |       |       | 100.0 |
+| *Total time*                                              | *74:37* |       |       | 100.0 |
 |-----------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                   | 74:18   |       |       | 100.0 |
-| Active                                                    |         | 74:18 |       | 100.0 |
+| Stories                                                   | 74:37   |       |       | 100.0 |
+| Active                                                    |         | 74:37 |       | 100.0 |
 | Edit release notes for previous sprint                    |         |       |  1:47 |   2.4 |
 | Sprint and product backlog grooming                       |         |       |  7:14 |   9.7 |
 | Create a video demo for the previous sprint's features    |         |       |  3:11 |   4.3 |
@@ -28,9 +28,9 @@
 | Simplify qualified name                                   |         |       |  3:39 |   4.9 |
 | Rename "language" to "technical space"                    |         |       |  7:22 |   9.9 |
 | Add intrinsic technical space ownership                   |         |       |  1:12 |   1.6 |
-| Promote extraction entities to meta-model elements        |         |       | 36:41 |  49.4 |
+| Promote extraction entities to meta-model elements        |         |       | 36:41 |  49.2 |
 | Integrate report-ci with dogen                            |         |       |  2:09 |   2.9 |
-| Move all utility formatters from extraction to generation |         |       |  0:27 |   0.6 |
+| Move all utility formatters from extraction to generation |         |       |  0:46 |   1.0 |
 | Remove annotations from stitch templates                  |         |       |  1:17 |   1.7 |
 | Supply decorations as a stitch parameter                  |         |       |  4:29 |   6.0 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
@@ -491,6 +491,7 @@ submitted a PR. Help him integrate it with Dogen.
 
 *** STARTED Move all utility formatters from extraction to generation :story:
     :LOGBOOK:
+    CLOCK: [2019-04-05 Fri 21:45]--[2019-04-05 Fri 22:04] =>  0:19
     CLOCK: [2019-03-30 Sat 13:39]--[2019-03-30 Sat 14:06] =>  0:27
     :END:
 
