--- a/doc/agile/v1/sprint_backlog_14.org
+++ b/doc/agile/v1/sprint_backlog_14.org
@@ -12,23 +12,23 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-04-05 Fri 22:04]
+#+CAPTION: Clock summary at [2019-04-06 Sat 06:47]
 | <75>                                                      |         |       |       |       |
 | Headline                                                  | Time    |       |       |     % |
 |-----------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                              | *74:37* |       |       | 100.0 |
+| *Total time*                                              | *75:21* |       |       | 100.0 |
 |-----------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                   | 74:37   |       |       | 100.0 |
-| Active                                                    |         | 74:37 |       | 100.0 |
+| Stories                                                   | 75:21   |       |       | 100.0 |
+| Active                                                    |         | 75:21 |       | 100.0 |
 | Edit release notes for previous sprint                    |         |       |  1:47 |   2.4 |
-| Sprint and product backlog grooming                       |         |       |  7:14 |   9.7 |
-| Create a video demo for the previous sprint's features    |         |       |  3:11 |   4.3 |
+| Sprint and product backlog grooming                       |         |       |  7:14 |   9.6 |
+| Create a video demo for the previous sprint's features    |         |       |  3:11 |   4.2 |
 | Fix issues with emacs                                     |         |       |  2:42 |   3.6 |
-| Create a basic "project plan"                             |         |       |  2:08 |   2.9 |
-| Simplify qualified name                                   |         |       |  3:39 |   4.9 |
-| Rename "language" to "technical space"                    |         |       |  7:22 |   9.9 |
+| Create a basic "project plan"                             |         |       |  2:08 |   2.8 |
+| Simplify qualified name                                   |         |       |  3:39 |   4.8 |
+| Rename "language" to "technical space"                    |         |       |  7:22 |   9.8 |
 | Add intrinsic technical space ownership                   |         |       |  1:12 |   1.6 |
-| Promote extraction entities to meta-model elements        |         |       | 36:41 |  49.2 |
+| Promote extraction entities to meta-model elements        |         |       | 37:25 |  49.7 |
 | Integrate report-ci with dogen                            |         |       |  2:09 |   2.9 |
 | Move all utility formatters from extraction to generation |         |       |  0:46 |   1.0 |
 | Remove annotations from stitch templates                  |         |       |  1:17 |   1.7 |
@@ -330,6 +330,7 @@ generation types for full/partial/no generation.
 *** COMPLETED Promote extraction entities to meta-model elements      :story:
     CLOSED: [2019-04-05 Fri 21:41]
     :LOGBOOK:
+    CLOCK: [2019-04-06 Sat 06:02]--[2019-04-06 Sat 06:46] =>  0:44
     CLOCK: [2019-04-05 Fri 21:22]--[2019-04-05 Fri 21:36] =>  0:14
     CLOCK: [2019-04-05 Fri 20:47]--[2019-04-05 Fri 21:21] =>  0:34
     CLOCK: [2019-04-05 Fri 20:41]--[2019-04-05 Fri 20:46] =>  0:05
