--- a/doc/agile/v1/sprint_backlog_14.org
+++ b/doc/agile/v1/sprint_backlog_14.org
@@ -12,25 +12,25 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-04-06 Sat 11:33]
+#+CAPTION: Clock summary at [2019-04-06 Sat 12:23]
 | <75>                                                      |         |       |       |       |
 | Headline                                                  | Time    |       |       |     % |
 |-----------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                              | *76:55* |       |       | 100.0 |
+| *Total time*                                              | *77:44* |       |       | 100.0 |
 |-----------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                   | 76:55   |       |       | 100.0 |
-| Active                                                    |         | 76:55 |       | 100.0 |
+| Stories                                                   | 77:44   |       |       | 100.0 |
+| Active                                                    |         | 77:44 |       | 100.0 |
 | Edit release notes for previous sprint                    |         |       |  1:47 |   2.3 |
-| Sprint and product backlog grooming                       |         |       |  7:14 |   9.4 |
+| Sprint and product backlog grooming                       |         |       |  7:14 |   9.3 |
 | Create a video demo for the previous sprint's features    |         |       |  3:11 |   4.1 |
 | Fix issues with emacs                                     |         |       |  2:42 |   3.5 |
-| Create a basic "project plan"                             |         |       |  2:08 |   2.8 |
+| Create a basic "project plan"                             |         |       |  2:08 |   2.7 |
 | Simplify qualified name                                   |         |       |  3:39 |   4.7 |
-| Rename "language" to "technical space"                    |         |       |  7:22 |   9.6 |
-| Add intrinsic technical space ownership                   |         |       |  1:12 |   1.6 |
-| Promote extraction entities to meta-model elements        |         |       | 37:25 |  48.6 |
+| Rename "language" to "technical space"                    |         |       |  7:22 |   9.5 |
+| Add intrinsic technical space ownership                   |         |       |  1:12 |   1.5 |
+| Promote extraction entities to meta-model elements        |         |       | 37:25 |  48.1 |
 | Integrate report-ci with dogen                            |         |       |  2:09 |   2.8 |
-| Move all utility formatters from extraction to generation |         |       |  2:20 |   3.0 |
+| Move all utility formatters from extraction to generation |         |       |  3:09 |   4.1 |
 | Remove annotations from stitch templates                  |         |       |  1:17 |   1.7 |
 | Supply decorations as a stitch parameter                  |         |       |  4:29 |   5.8 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
@@ -492,6 +492,7 @@ submitted a PR. Help him integrate it with Dogen.
 
 *** STARTED Move all utility formatters from extraction to generation :story:
     :LOGBOOK:
+    CLOCK: [2019-04-06 Sat 11:34]--[2019-04-06 Sat 12:23] =>  0:49
     CLOCK: [2019-04-06 Sat 10:45]--[2019-04-06 Sat 11:33] =>  0:48
     CLOCK: [2019-04-06 Sat 06:47]--[2019-04-06 Sat 07:33] =>  0:46
     CLOCK: [2019-04-05 Fri 21:45]--[2019-04-05 Fri 22:04] =>  0:19
