--- a/doc/agile/v1/sprint_backlog_14.org
+++ b/doc/agile/v1/sprint_backlog_14.org
@@ -12,27 +12,27 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-04-06 Sat 12:23]
+#+CAPTION: Clock summary at [2019-04-06 Sat 16:52]
 | <75>                                                      |         |       |       |       |
 | Headline                                                  | Time    |       |       |     % |
 |-----------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                              | *77:44* |       |       | 100.0 |
+| *Total time*                                              | *79:03* |       |       | 100.0 |
 |-----------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                   | 77:44   |       |       | 100.0 |
-| Active                                                    |         | 77:44 |       | 100.0 |
+| Stories                                                   | 79:03   |       |       | 100.0 |
+| Active                                                    |         | 79:03 |       | 100.0 |
 | Edit release notes for previous sprint                    |         |       |  1:47 |   2.3 |
-| Sprint and product backlog grooming                       |         |       |  7:14 |   9.3 |
-| Create a video demo for the previous sprint's features    |         |       |  3:11 |   4.1 |
-| Fix issues with emacs                                     |         |       |  2:42 |   3.5 |
+| Sprint and product backlog grooming                       |         |       |  7:14 |   9.2 |
+| Create a video demo for the previous sprint's features    |         |       |  3:11 |   4.0 |
+| Fix issues with emacs                                     |         |       |  2:42 |   3.4 |
 | Create a basic "project plan"                             |         |       |  2:08 |   2.7 |
-| Simplify qualified name                                   |         |       |  3:39 |   4.7 |
-| Rename "language" to "technical space"                    |         |       |  7:22 |   9.5 |
+| Simplify qualified name                                   |         |       |  3:39 |   4.6 |
+| Rename "language" to "technical space"                    |         |       |  7:22 |   9.3 |
 | Add intrinsic technical space ownership                   |         |       |  1:12 |   1.5 |
-| Promote extraction entities to meta-model elements        |         |       | 37:25 |  48.1 |
-| Integrate report-ci with dogen                            |         |       |  2:09 |   2.8 |
-| Move all utility formatters from extraction to generation |         |       |  3:09 |   4.1 |
-| Remove annotations from stitch templates                  |         |       |  1:17 |   1.7 |
-| Supply decorations as a stitch parameter                  |         |       |  4:29 |   5.8 |
+| Promote extraction entities to meta-model elements        |         |       | 37:25 |  47.3 |
+| Integrate report-ci with dogen                            |         |       |  2:09 |   2.7 |
+| Move all utility formatters from extraction to generation |         |       |  4:28 |   5.7 |
+| Remove annotations from stitch templates                  |         |       |  1:17 |   1.6 |
+| Supply decorations as a stitch parameter                  |         |       |  4:29 |   5.7 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -492,6 +492,8 @@ submitted a PR. Help him integrate it with Dogen.
 
 *** STARTED Move all utility formatters from extraction to generation :story:
     :LOGBOOK:
+    CLOCK: [2019-04-06 Sat 16:01]--[2019-04-06 Sat 16:52] =>  0:51
+    CLOCK: [2019-04-06 Sat 12:24]--[2019-04-06 Sat 12:52] =>  0:28
     CLOCK: [2019-04-06 Sat 11:34]--[2019-04-06 Sat 12:23] =>  0:49
     CLOCK: [2019-04-06 Sat 10:45]--[2019-04-06 Sat 11:33] =>  0:48
     CLOCK: [2019-04-06 Sat 06:47]--[2019-04-06 Sat 07:33] =>  0:46
