--- a/doc/agile/v1/sprint_backlog_14.org
+++ b/doc/agile/v1/sprint_backlog_14.org
@@ -12,25 +12,25 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-04-06 Sat 17:17]
+#+CAPTION: Clock summary at [2019-04-06 Sat 17:32]
 | <75>                                                      |         |       |       |       |
 | Headline                                                  | Time    |       |       |     % |
 |-----------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                              | *79:26* |       |       | 100.0 |
+| *Total time*                                              | *79:40* |       |       | 100.0 |
 |-----------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                   | 79:26   |       |       | 100.0 |
-| Active                                                    |         | 79:26 |       | 100.0 |
+| Stories                                                   | 79:40   |       |       | 100.0 |
+| Active                                                    |         | 79:40 |       | 100.0 |
 | Edit release notes for previous sprint                    |         |       |  1:47 |   2.2 |
 | Sprint and product backlog grooming                       |         |       |  7:14 |   9.1 |
 | Create a video demo for the previous sprint's features    |         |       |  3:11 |   4.0 |
 | Fix issues with emacs                                     |         |       |  2:42 |   3.4 |
 | Create a basic "project plan"                             |         |       |  2:08 |   2.7 |
 | Simplify qualified name                                   |         |       |  3:39 |   4.6 |
-| Rename "language" to "technical space"                    |         |       |  7:22 |   9.3 |
+| Rename "language" to "technical space"                    |         |       |  7:22 |   9.2 |
 | Add intrinsic technical space ownership                   |         |       |  1:12 |   1.5 |
-| Promote extraction entities to meta-model elements        |         |       | 37:25 |  47.1 |
+| Promote extraction entities to meta-model elements        |         |       | 37:25 |  47.0 |
 | Integrate report-ci with dogen                            |         |       |  2:09 |   2.7 |
-| Move all utility formatters from extraction to generation |         |       |  4:51 |   6.1 |
+| Move all utility formatters from extraction to generation |         |       |  5:05 |   6.4 |
 | Remove annotations from stitch templates                  |         |       |  1:17 |   1.6 |
 | Supply decorations as a stitch parameter                  |         |       |  4:29 |   5.6 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
@@ -492,6 +492,7 @@ submitted a PR. Help him integrate it with Dogen.
 
 *** STARTED Move all utility formatters from extraction to generation :story:
     :LOGBOOK:
+    CLOCK: [2019-04-06 Sat 17:18]--[2019-04-06 Sat 17:32] =>  0:14
     CLOCK: [2019-04-06 Sat 17:12]--[2019-04-06 Sat 17:17] =>  0:05
     CLOCK: [2019-04-06 Sat 16:53]--[2019-04-06 Sat 17:11] =>  0:18
     CLOCK: [2019-04-06 Sat 16:01]--[2019-04-06 Sat 16:52] =>  0:51
